# moe-rampup

./: AGENTS.md  MLA_DEEP_DIVE.md  README.md  profiling_notes.md  temp.txt
kernels/: CMakeLists.txt
kernels/common/: common.h
kernels/k1_vector_add_bf16/: k1_vector_add_bf16.cpp
kernels/k2_vector_fma/: k2_vector_fma.cpp
kernels/k3_reduction/: k3_reduction.cpp  k3_reduction_unroll_jam.cpp
kernels/k4_silu/: k4_silu.cpp
kernels/k5_rmsnorm/: k5_rmsnorm.cpp  k5_rmsnorm_newton.cpp
kernels/k6_softmax/: k6_softmax.cpp
profile/P2/: common_phys_cores.sh  run_all_nodes_aggregate.sh  run_cross_numa_remote.sh  run_single_numa_local.sh  run_thread_sweep.sh  smoke_test.sh
